# Game_of_life

./: .gitignore  CMakeLists.txt  GOL.cpp  GOL.hpp  example.txt  main.cpp  readme.txt
